# Tasks_cpp

Task1/: main.cpp  my_vector.h
Task2/: CMakeLists.txt  main.cpp
Task2/headers/app/: app_context.h  application.h
Task2/headers/cli/: command_support.h  main_menu_action.h  menu.h
Task2/headers/cli/commands/: assign_machine.h  buy_machine.h  buy_machine_menu_command.h  buy_resources_menu_command.h  buy_tools_menu_command.h  command.h  exit_menu_command.h  my_machines_menu_command.h  my_projects_menu_command.h  my_tools_menu_command.h  next_week.h  pause_project.h  release_machine.h  simulate_week_menu_command.h  stats.h  stats_menu_command.h  take_project.h  take_project_menu_command.h
Task2/headers/domain/: company.h  equipment.h  machine.h  project.h  tool.h
Task2/headers/repository/: equipment_repository.h  machine_repository.h  project_repository.h  repository.h
Task2/headers/service/: construction_service.h  finance_service.h  simulation_service.h
Task2/src/app/: application.cpp
Task2/src/cli/: command_support.cpp  main_menu_action.cpp  menu.cpp
Task2/src/cli/commands/: assign_machine.cpp  buy_machine.cpp  buy_machine_menu_command.cpp  buy_resources_menu_command.cpp  buy_tools_menu_command.cpp  exit_menu_command.cpp  my_machines_menu_command.cpp  my_projects_menu_command.cpp  my_tools_menu_command.cpp  next_week.cpp  pause_project.cpp  release_machine.cpp  simulate_week_menu_command.cpp  stats.cpp  stats_menu_command.cpp  take_project.cpp  take_project_menu_command.cpp
Task2/src/domain/: company.cpp  equipment.cpp  machine.cpp  project.cpp  tool.cpp
Task2/src/repository/: equipment_repository.cpp  machine_repository.cpp  project_repository.cpp
Task2/src/service/: construction_service.cpp  finance_service.cpp  simulation_service.cpp
Task3/: binary_tree.h  binary_tree.hpp  main.cpp
Task4/: CMakeLists.txt  prim.txt  tree.txt
Task4/headers/controller/: graph_controller.h
Task4/headers/core/: prim_spanning_tree.h
Task4/headers/logging/: app_logger.h
Task4/headers/model/: graph.h  graph_io.h
Task4/headers/view/: main_window.h
Task4/src/: main.cpp
Task4/src/controller/: graph_controller.cpp
Task4/src/core/: prim_spanning_tree.cpp
Task4/src/logging/: app_logger.cpp
Task4/src/model/: graph.cpp  graph_io.cpp
Task4/src/view/: main_window.cpp
